# bibliocat-api

./: .dockerignore  .example.env  .example.env.db  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.dev-subset.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
api/: Dockerfile  dockerfile  main.py  pyproject.toml  requirements.txt
api/src/: main.py
api/src/blueprints/: router.py
api/src/config/: db_config.py  load_config.py  logger_config.py  reverse_proxied.py
api/src/controllers/: author_controller.py  base_controller.py  book_controller.py  reading_log_controller.py  user_controller.py  writable_controller.py
api/src/db/: connection_manager.py
api/src/hooks/: auth_required.py  database.py  exception_handlers.py  logging.py
api/src/repositories/: __init__.py  author_repo.py  base_repo.py  book_repo.py  reading_log_repo.py  user_repo.py  writable_repo.py
api/src/services/: author_service.py  base_service.py  book_service.py  reading_log_service.py  user_service.py  writable_service.py
api/src/util/errors/: error.py
api/src/util/filters/: author_filters.py  base_filters.py  book_filters.py  reading_log_filters.py
api/src/util/models/: __init__.py  author.py  base.py  book.py  category.py  publisher.py  reading_log.py  user.py
api/src/util/schemas/: book.py  (+3 more)
api/static/: BiblioCat API v1.openapi.json  Default module.openapi.json  bibliocat-api-v1.openapi.json  default-module.openapi.json
api/tests/: test_book_controller.py  test_reading_log_controller.py  test_reading_log_service.py
(+89 files in other folders)
