[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "bibliocat-api"
version = "v0.5.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
    "datamodel-code-generator[ruff]>=0.56.1",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "flask-swagger-ui>=5.32.5",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.13.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.4",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--junitxml=test-reports/junit.xml"
